<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BetManagement</string>
    <string name="hello_world">Hello world!</string>

    <!-- Content descriptions -->
    <string name="desc_list_item_icon" translatable="false">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>

    <!-- NavigationDrawer -->
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_bets">Bets</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_groups">Groups</string>
    <string name="title_activity_bet_details">BetDetailsActivity</string>


    <!-- Betdetails -->
    <string name="betdetails_label_name">Name</string>
    <string name="betdetails_label_start">Start</string>
    <string name="betdetails_label_end">End</string>
    <string name="betdetails_label_subscriber">Subscriber</string>
    <string name="betdetails_label_deadline">Deadline</string>
    <string name="betdetails_label_description">Description</string>

    <!--Menu Umbau-->
    <string name="nav_betsTestUmstellung">Testseite</string>
    <string name="pref_bet_name">Betname</string>
    <string name="nav_SQLiteTest">SQLite Testseite</string>
    <string name="NewValue">Neuer Datenbankeintrag</string>

</resources>
