<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.rocks.jsdevelopment.betmanagement.fragment.BetDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_name">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/betdetails_name"
                android:hint="@string/betdetails_label_name"
                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/container_start"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/betdetails_start"
                android:hint="@string/betdetails_label_start"
                android:inputType="date"
                android:ems="10"
                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>


        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_start"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/container_end"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/betdetails_end"
                android:hint="@string/betdetails_label_end"
                android:inputType="date"
                android:ems="10"
                />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_end"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/container_subscriber"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/betdetails_subscriber"
                android:hint="@string/betdetails_label_subscriber"

                />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_subscriber"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/container_deadline"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/betdetails_deadline"
                android:hint="@string/betdetails_label_deadline"
                android:inputType="date"
                android:ems="10"
                android:layout_below="@+id/container_description"
                />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_deadline"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/container_description"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/betdetails_description"
                android:hint="@string/betdetails_label_description"
                />

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </RelativeLayout>

</FrameLayout>
